chore(port): initial 1.20.1 fabric port from 1.21.4
- Downgrade build system: Java 17, Loom 1.7, Gradle 8.10, Fabric API 0.92.2
- Replace CustomPayload interface with channel-based PacketByteBuf networking
- Rewrite aggregation engine to use NetworkState.PLAY packet handler
- Rewrite all mixins for 1.20.1 class names (PacketEncoder, DecoderHandler,
  ThreadedAnvilChunkStorage)
- Remove PacketCodecDispatcher/PayloadTypeRegistry dependencies
- Simplify CachedChunkTrackingView without ChunkFilter
- Runtime vanilla packet enumeration via NetworkState.getPacketIdToPacketMap()
- Delete CustomPacketPayloadMixin (no equivalent target in 1.20.1)